Change-Id: I818a58440dd24af4936ee1573f80e9aee6627be0

--- a/README
+++ b/README
@@ -22,7 +22,9 @@ directory. You shall see the following files and directories:
       UPGRADE              upgrading instructions
 
 
-REQUIREMENTS
+REQUIREMENTS 
+
+ÒªÇó
 ------------
 
 The minimum requirement by Yii is that your Web server supports
