Change-Id: I5fe383f6878741c10f0427bb242ab066492f67e9

--- a/README
+++ b/README
@@ -1,3 +1,47 @@
+框架学习总结
+=============================
+
+第一步：
+本框架的主框是必需加载的
+
+	1,加载框架文件如：
+	$yii=dirname(__FILE__).'/../../framework/yii.php';	//主框架
+	require( $yii );
+	
+	1,配置文件加载：
+	$config=dirname(__FILE__).'/protected/config/main.php'; //主配置文件
+	
+	3,创建一个web应用
+	Yii::createWebApplication($config)->run();
+	
+	
+第二步：
+框架运行，会初始化框架所需的要配置信息，及加载核心类
+	1,加载框架基类时首先声明定义的常量，包括错误日志记录方式，框架目录常量等。
+	
+	2,设置导入类方法；
+	3,设置自动导入类方法；
+	4,取框架目录方法；
+	5,导入组件方法,即导入类库方法;
+	6,设置类根目录别名方法;
+	7,设置日志方法；
+	8,autoloader 自动加载类方法;
+	9,记录开始执行类到结束，共执行的时间方法；
+	10,多语言转换方法;
+	11,系统版权方法;
+
+
+第三步：
+创建web应用主类，并初始化
+	1,属性：默认控制器;
+	2,属性：默认布局;
+	3,属性：类和路径映射配置数组
+	4,
+
+
+
+
+
 Yii Web Programming Framework
 
 本程序是学习框架结构
