--- a/README
+++ b/README
@@ -15,7 +15,7 @@
 	Yii::createWebApplication($config)->run();
 	
 	
-第二步：
+第二步：类似loader类
 框架运行，会初始化框架所需的要配置信息，及加载核心类
 	1,加载框架基类时首先声明定义的常量，包括错误日志记录方式，框架目录常量等。
 	
@@ -31,15 +31,31 @@
 	11,系统版权方法;
 
 
-第三步：
+第三步：类似factory类
 创建web应用主类，并初始化
 	1,属性：默认控制器;
 	2,属性：默认布局;
 	3,属性：类和路径映射配置数组
 	4,
 
-
-
+    提供以下方法：
+	Yii 预定义了一系列核心应用组件，提供常见 Web 应用中所用的功能。例如， request 组件用于解析用户请求并提供例如 URL，cookie 等信息。通过配置这些核心组件的属性，我们可以在几乎所有的方面修改Yii 的默认行为。下面我们列出了由 CWebApplication 预定义的核心组件。
+	assetManager: CAssetManager - 管理私有资源文件的发布。
+	authManager: CAuthManager - 管理基于角色的访问控制 (RBAC)
+	.cache: CCache - 提供数据缓存功能。注意，你必须指定实际的类（例如CMemCache, CDbCache）。否则，当你访问此组件时将返回 NULL。
+	clientScript: CClientScript - 管理客户端脚本 (javascripts 和 CSS)
+	.coreMessages: CPhpMessageSource - 提供 Yii 框架用到的核心信息的翻译。
+	db: CDbConnection - 提供数据库连接。注意，使用此组件你必须配置其 connectionString 属性。
+	errorHandler: CErrorHandler - 处理未捕获的 PHP 错误和异常。
+	format: CFormatter - 格式化数值显示。此功能从版本 1.1.0 起开始提供。
+	messages: CPhpMessageSource - 提供Yii应用中使用的信息翻译。
+	request: CHttpRequest - 提供关于用户请求的信息。
+	securityManager: CSecurityManager - 提供安全相关的服务，例如散列，加密。
+	session: CHttpSession - 提供session相关的功能。
+	statePersister: CStatePersister - 提供全局状态持久方法。
+	urlManager: CUrlManager - 提供 URL 解析和创建相关功能
+	user: CWebUser - 提供当前用户的识别信息。
+	themeManager: CThemeManager - 管理主题。 
 
 
 Yii Web Programming Framework
