Change-Id: Ic139b875e5bd9b94cf9db131c55982e5a7e89a3f

--- a/README
+++ b/README
@@ -31,12 +31,26 @@
 	11,系统版权方法;
 
 
-第三步：类似factory类
+第三步：
 创建web应用主类，并初始化
 	1,属性：默认控制器;
 	2,属性：默认布局;
 	3,属性：类和路径映射配置数组
-	4,
+	4,属性：所有请求全部指定一个路径的配置数组，常用于关闭站点;
+	5,属性：控制器文件路径
+	6,属性：视图文件路径
+	7,属性：系统视图文件路径
+	8,属性：布局文件路径
+	9,属性：当前控制器
+	10,属性：当前主题
+	
+	
+	方法：
+	11,应用主要方法，根据提交的网址信息，用route对象分析，主要是处理web请求所调用的控制器;
+	12,注册组件
+	13,取认证管理组件类;
+	14,取
+
 
     提供以下方法：
 	Yii 预定义了一系列核心应用组件，提供常见 Web 应用中所用的功能。例如， request 组件用于解析用户请求并提供例如 URL，cookie 等信息。通过配置这些核心组件的属性，我们可以在几乎所有的方面修改Yii 的默认行为。下面我们列出了由 CWebApplication 预定义的核心组件。
